# course-app

./: Makefile  pyproject.toml  setup.cfg  test.py
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
inference_service/: Makefile  pyproject.toml
inference_service/app/: run.py
inference_service/app/api/: prediction.py
inference_service/app/config/: .env  model.py
inference_service/app/schema/: apartment.py
inference_service/app/services/: model_inference.py
project/: Makefile
project/src/: runner_builder.py  runner_inference.py
project/src/config/: .env
project/src/db/: db_model.py
project/src/model/: model_builder.py  model_inference.py
project/src/model/pipeline/: collection.py  model.py
src/: runner.py
src/config/: db.py  logger.py
src/model/: model_service.py
src/model/pipeline/: preparation.py
